--- a/client/package.json
+++ b/client/package.json
@@ -74,7 +74,7 @@
     "domino": "^2.1.3",
     "express": "^4.15.2",
     "file-saver": "^1.3.8",
-    "firebase": "^5.5.1",
+    "firebase": "^8.1.2",
     "font-awesome": "^4.7.0",
     "froala-editor": "^2.8.4",
     "hammerjs": "^2.0.8",
@@ -95,6 +95,7 @@
     "ngx-cookie-service": "^2.1.0",
     "ngx-img-cropper": "^7.0.5",
     "ngx-pagination": "^3.2.1",
+    "node-sass": "^4.14.1",
     "rxjs": "^6.3.3",
     "satellizer": "^0.15.5",
     "save": "^2.3.2",
